Use a queue for single thread reindex command processing